--- a/composer.json
+++ b/composer.json
@@ -5,23 +5,24 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
-        "laravelcollective/html": "5.2.*",
-        "laracasts/flash": "~1.3",
+        "php": ">=5.6.4",
+        "barryvdh/laravel-dompdf": "^0.7.0",
+        "intervention/image": "^2.3",
+        "laravel/framework": "5.3.*",
+        "laravelcollective/html": "5.3.*",
+        "laracasts/flash": "~2",
         "laracasts/presenter": "^0.2.1",
         "barryvdh/laravel-debugbar": "^2.0",
         "backup-manager/laravel": "^1.0",
         "maatwebsite/excel": "~2.1.0",
-        "barryvdh/laravel-dompdf": "^0.6.1",
         "spatie/laravel-fractal": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "phpunit/phpunit": "~5.0",
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*"
     },
     "autoload": {
         "classmap": [
@@ -44,13 +45,11 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "php artisan clear-compiled",
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize"
         ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
-        ],
         "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ]
     },
