--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "johnkary/phpunit-speedtrap": "^1.0"
     },
     "autoload": {
         "classmap": [
