Added DatabaseMigrateSeeds trait for testing
Update all test case classes to use new DatabaseMigrateSeeds trait

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     },
     "autoload-dev": {
         "classmap": [
+            "tests/Traits",
             "tests/TestCase.php"
         ]
     },
