Update test class suite to use Tests namespace

--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,9 @@
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/Traits",
-            "tests/TestCase.php"
-        ]
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     },
     "scripts": {
         "post-root-package-install": [
