--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "barryvdh/laravel-dompdf": "^0.7.0",
         "intervention/image": "^2.3",
         "laravel/framework": "5.4.*",
-        "luthfi/formfield": "1.*",
+        "luthfi/formfield": "^0.1.6",
         "laracasts/flash": "~2",
         "laracasts/presenter": "^0.2.1",
         "backup-manager/laravel": "^1.0",
