--- a/composer.json
+++ b/composer.json
@@ -5,28 +5,29 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "barryvdh/laravel-dompdf": "^0.7.0",
+        "php": ">=7.0.0",
+        "barryvdh/laravel-dompdf": "^0.8.0",
         "intervention/image": "^2.3",
-        "laravel/framework": "5.4.*",
-        "luthfi/formfield": "^0.1.6",
+        "laravel/framework": "5.5.*",
+        "luthfi/formfield": "^0.2.0",
         "laracasts/flash": "~2",
         "laracasts/presenter": "^0.2.1",
         "backup-manager/laravel": "^1.0",
         "maatwebsite/excel": "~2.1.0",
-        "spatie/laravel-fractal": "^3.4"
+        "spatie/laravel-fractal": "^5.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^2.0",
         "fzaninotto/faker": "~1.4",
-        "laravel/browser-kit-testing": "^1.0",
+        "laravel/browser-kit-testing": "^2.0",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~6.0",
         "johnkary/phpunit-speedtrap": "^1.0"
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database/seeds",
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
@@ -37,23 +38,27 @@
             "Tests\\": "tests/"
         }
     },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+            ]
+        }
+    },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "@php artisan key:generate"
         ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
     }
 }
