--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "laravel/browser-kit-testing": "^2.0",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0",
-        "johnkary/phpunit-speedtrap": "^1.0"
+        "johnkary/phpunit-speedtrap": "dev-master"
     },
     "autoload": {
         "classmap": [
