--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
 APP_ENV=local
-APP_DEBUG=true
 APP_KEY=SomeRandomString
+APP_DEBUG=true
+APP_LOG_LEVEL=debug
+APP_URL=http://localhost
 
-APP_LOCALE=id
 APP_TIMEZONE=Asia/Makassar
 
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
