--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,17 @@
         "laracasts/flash": "~2",
         "laracasts/presenter": "^0.2.1",
         "laravel/framework": "5.5.*",
-        "luthfi/formfield": "^0.2.3",
+        "luthfi/formfield": "^0.2.7",
         "riskihajar/terbilang": "^1.2",
         "spatie/laravel-fractal": "^5.0"
     },
 
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^2.0",
+        "barryvdh/laravel-debugbar": "^3.1",
         "fzaninotto/faker": "~1.4",
         "johnkary/phpunit-speedtrap": "^2.0",
-        "laravel/browser-kit-testing": "^2.0",
-        "luthfi/simple-crud-generator": "^1.0",
-        "mockery/mockery": "0.9.*",
+        "luthfi/simple-crud-generator": "^1.1",
+        "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0"
     },
     "autoload": {
