--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "barryvdh/laravel-debugbar": "^3.1",
         "fzaninotto/faker": "~1.4",
         "johnkary/phpunit-speedtrap": "^2.0",
+        "laravel/browser-kit-testing": "2.0.x-dev",
         "luthfi/simple-crud-generator": "^1.2",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0"
