Add required files for laravel 5.6
Update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
+APP_NAME="Free-PMO"
 APP_ENV=local
 APP_KEY=SomeRandomString
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+LOG_CHANNEL=stack
 APP_TIMEZONE=Asia/Makassar
 
 DB_CONNECTION=mysql
@@ -29,3 +31,11 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM=null
 MAIL_NAME=null
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
