--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,8 @@ php:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction
-  - travis_retry composer require php-coveralls/php-coveralls
   - cp .env.example .env
   - php artisan key:generate
 
 script:
-  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
-
-after_success:
-  - vendor/bin/php-coveralls -v --exclude-no-stmt
+  - vendor/bin/phpunit
