--- a/composer.json
+++ b/composer.json
@@ -1,66 +1,67 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
-    "license": "MIT",
-    "type": "project",
-    "require": {
-        "php": "^7.1.3",
-        "backup-manager/laravel": "^1.2",
-        "fideloper/proxy": "^4.0",
-        "laracasts/presenter": "^0.2.1",
-        "laravel/framework": "5.7.*",
-        "luthfi/formfield": "^1.0",
-        "riskihajar/terbilang": "^1.2",
-        "spatie/laravel-fractal": "^5.5"
-    },
-
-    "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.1",
-        "doctrine/dbal": "^2.9",
-        "fzaninotto/faker": "^1.4",
-        "johnkary/phpunit-speedtrap": "^3.0",
-        "luthfi/simple-crud-generator": "1.2.*",
-        "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.0"
-    },
-    "autoload": {
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
-        "psr-4": {
-            "App\\": "app/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": [
-            ]
-        }
-    },
-    "scripts": {
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate"
-        ],
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
-        ]
-    },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+	"name": "laravel/laravel",
+	"description": "The Laravel Framework.",
+	"keywords": [
+		"framework",
+		"laravel"
+	],
+	"license": "MIT",
+	"type": "project",
+	"require": {
+		"php": "^7.1.3",
+		"backup-manager/laravel": "^1.2",
+		"fideloper/proxy": "^4.0",
+		"laracasts/presenter": "^0.2.1",
+		"laravel/framework": "5.7.*",
+		"luthfi/formfield": "^1.0",
+		"riskihajar/terbilang": "^1.2",
+		"spatie/laravel-fractal": "^5.5"
+	},
+	"require-dev": {
+		"barryvdh/laravel-debugbar": "^3.1",
+		"doctrine/dbal": "^2.9",
+		"fzaninotto/faker": "^1.4",
+		"johnkary/phpunit-speedtrap": "^3.0",
+		"luthfi/simple-crud-generator": "1.2.*",
+		"mockery/mockery": "^1.0",
+		"phpunit/phpunit": "^7.0"
+	},
+	"autoload": {
+		"classmap": [
+			"database/seeds",
+			"database/factories"
+		],
+		"psr-4": {
+			"App\\": "app/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Tests\\": "tests/"
+		}
+	},
+	"extra": {
+		"laravel": {
+			"dont-discover": []
+		}
+	},
+	"scripts": {
+		"post-root-package-install": [
+			"@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+		],
+		"post-create-project-cmd": [
+			"@php artisan key:generate"
+		],
+		"post-autoload-dump": [
+			"Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+			"@php artisan package:discover"
+		]
+	},
+	"config": {
+		"preferred-install": "dist",
+		"sort-packages": true,
+		"optimize-autoloader": true
+	},
+	"minimum-stability": "dev",
+	"prefer-stable": true
 }
