--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,22 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
-        "backup-manager/laravel": "^1.2",
+        "php": "^7.2",
+        "backup-manager/laravel": "^1.4",
         "fideloper/proxy": "^4.0",
         "laracasts/presenter": "^0.2.1",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "^6.0",
         "luthfi/formfield": "^1.0",
         "riskihajar/terbilang": "^1.2",
-        "spatie/laravel-fractal": "^5.5"
+        "spatie/laravel-fractal": "^5.0"
     },
-
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
         "doctrine/dbal": "^2.9",
@@ -40,8 +42,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
