--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
-        "backup-manager/laravel": "^1.2",
+        "php": "^7.2",
+        "backup-manager/laravel": "dev-master",
         "laracasts/presenter": "^0.2.1",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "luthfi/formfield": "^1.0",
         "riskihajar/terbilang": "^1.2",
         "spatie/laravel-fractal": "^5.0"
@@ -19,7 +19,7 @@
         "barryvdh/laravel-debugbar": "^3.1",
         "fzaninotto/faker": "^1.4",
         "johnkary/phpunit-speedtrap": "^3.0",
-        "luthfi/simple-crud-generator": "1.2.*",
+        "luthfi/simple-crud-generator": "dev-master",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^7.0"
     },
