--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "barryvdh/laravel-debugbar": "^3.1",
         "fzaninotto/faker": "^1.4",
         "johnkary/phpunit-speedtrap": "^3.0",
+        "laravel/legacy-factories": "^1.1",
         "luthfi/simple-crud-generator": "dev-master",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^9.0"
