--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,13 @@
 
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
+        "brianium/paratest": "^6.2",
         "fzaninotto/faker": "^1.4",
         "johnkary/phpunit-speedtrap": "^3.0",
         "laravel/legacy-factories": "^1.1",
         "luthfi/simple-crud-generator": "dev-master",
         "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^5.3",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
