feat: Set defaut filesystem driver to public

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 APP_TIMEZONE=Asia/Makassar
 
+FILESYSTEM_DRIVER=public
+FILESYSTEM_PUBLIC_HTML_PATH="/absolute/path/to/public_html/storage"
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_DATABASE=homestead
